# cross-platform-magic

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/window/: window.h  window_base.h  window_win32.cpp  window_win32.h  window_x11.cpp  window_x11.h
